rename page.css 7

--- a/account-settings.html
+++ b/account-settings.html
@@ -259,7 +259,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="personal-info-row-title"
-                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="tab__checkbox-mr-16">
@@ -327,7 +327,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="account-row-title"
-                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="tab__checkbox-mr-16">
@@ -413,7 +413,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="host-manage-row-title"
-                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="tab__checkbox-mr-16">
@@ -481,7 +481,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="experience-manage-row-title"
-                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="tab__checkbox-mr-16">
@@ -563,7 +563,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="host-referral-no-subtitle-row-title"
-                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="tab__checkbox-mr-16">
@@ -643,7 +643,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="how-airbnb-works-row-title"
-                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="tab__checkbox-mr-16">
@@ -711,7 +711,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="booking-and-traveling-row-title"
-                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="tab__checkbox-mr-16">
@@ -779,7 +779,7 @@
                                         aria-disabled="false"
                                         role="group"
                                         aria-labelledby="neighborhood-support-row-title"
-                                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                        class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                                       >
                                         <div class="flex">
                                           <div class="tab__checkbox-mr-16">
