--- a/contact-host.html
+++ b/contact-host.html
@@ -2182,7 +2182,7 @@
                                                               "
                                                             >
                                                               <div
-                                                                class="_ati8ih"
+                                                                class="place__nearby-card-pricing"
                                                               >
                                                                 <span
                                                                   class="pricing"
