--- a/edit/what.html
+++ b/edit/what.html
@@ -634,7 +634,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                                 </svg>
                                               </div>
                                             </div>
-                                            <div class="_klarpw">
+                                            <div class="place__recommended-no">
                                               <div
                                                 class="_pxnjg"
                                                 id="DURATION-InputField-help"
