--- a/gift.html
+++ b/gift.html
@@ -251,7 +251,7 @@
                                         </div>
                                       </label>
                                     </div>
-                                    <div class="_klarpw"></div>
+                                    <div class="place__recommended-no"></div>
                                   </div>
                                   <div class="fd6gab5 g1aixd53 dir dir-ltr">
                                     By redeeming this gift card, you agree to
