--- a/inbox.html
+++ b/inbox.html
@@ -232,7 +232,7 @@
                                   <header>
                                     <h2 class="_1mke8tr">Inbox</h2>
                                   </header>
-                                  <ul class="_2f5j8p">
+                                  <ul class="place__recommended-no-ul">
                                     <li class="_x32qnki">
                                       <a
                                         data-testid="folder-item"
@@ -301,7 +301,7 @@
                                 <section class="_13jnc9w">
                                   <div><h3 class="_gagmpc">SETTINGS</h3></div>
                                   <div>
-                                    <ul class="_2f5j8p">
+                                    <ul class="place__recommended-no-ul">
                                       <li class="_183ajur">
                                         <a
                                           data-testid="setting-item"
