--- a/invite-friends.html
+++ b/invite-friends.html
@@ -805,7 +805,7 @@
                   <div class="margin__bottom-24">
                     <button
                       type="button"
-                      class="_1rp5252"
+                      class="place__recommended-heart-btn"
                       id="show-details-modal__close"
                       aria-busy="false"
                       style="padding: 20px; margin: -20px"
