--- a/payment.html
+++ b/payment.html
@@ -493,7 +493,7 @@
                                                           payment method on Sep
                                                           24, 2022. No extra
                                                           fees.
-                                                          <div class="_klarpw">
+                                                          <div class="place__recommended-no">
                                                             <button
                                                               aria-label="Learn more about Pay Less Up Front"
                                                               type="button"
