--- a/personal-info.html
+++ b/personal-info.html
@@ -396,7 +396,7 @@
                                                 </div>
                                               </label>
                                             </div>
-                                            <div class="_klarpw"></div>
+                                            <div class="place__recommended-no"></div>
                                           </div>
                                         </div>
                                         <div class="account-container__menu-field">
@@ -425,7 +425,7 @@
                                                 </div>
                                               </label>
                                             </div>
-                                            <div class="_klarpw"></div>
+                                            <div class="place__recommended-no"></div>
                                           </div>
                                         </div>
                                       </div>
@@ -583,7 +583,7 @@
                                             </svg>
                                           </div>
                                         </div>
-                                        <div class="_klarpw"></div>
+                                        <div class="place__recommended-no"></div>
                                       </div>
                                     </div>
                                     <div id="airlock-inline-container"></div>
@@ -760,7 +760,7 @@
                                             </div>
                                           </label>
                                         </div>
-                                        <div class="_klarpw"></div>
+                                        <div class="place__recommended-no"></div>
                                       </div>
                                     </div>
                                     <div id="airlock-inline-container"></div>
@@ -1996,7 +1996,7 @@
                                                         </div>
                                                       </label>
                                                     </div>
-                                                    <div class="_klarpw"></div>
+                                                    <div class="place__recommended-no"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -2032,7 +2032,7 @@
                                                         </div>
                                                       </label>
                                                     </div>
-                                                    <div class="_klarpw"></div>
+                                                    <div class="place__recommended-no"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -2067,7 +2067,7 @@
                                                         </div>
                                                       </label>
                                                     </div>
-                                                    <div class="_klarpw"></div>
+                                                    <div class="place__recommended-no"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -2103,7 +2103,7 @@
                                                         </div>
                                                       </label>
                                                     </div>
-                                                    <div class="_klarpw"></div>
+                                                    <div class="place__recommended-no"></div>
                                                   </div>
                                                 </div>
                                               </div>
@@ -2240,7 +2240,7 @@
                                             </div>
                                           </label>
                                         </div>
-                                        <div class="_klarpw"></div>
+                                        <div class="place__recommended-no"></div>
                                       </div>
                                       <div style="margin-top: 16px">
                                         <div>
@@ -2268,7 +2268,7 @@
                                               </div>
                                             </label>
                                           </div>
-                                          <div class="_klarpw"></div>
+                                          <div class="place__recommended-no"></div>
                                         </div>
                                       </div>
                                       <div style="margin-top: 16px">
@@ -2500,7 +2500,7 @@
                                               </svg>
                                             </div>
                                           </div>
-                                          <div class="_klarpw"></div>
+                                          <div class="place__recommended-no"></div>
                                         </div>
                                       </div>
                                       <div style="margin-top: 16px">
@@ -2527,7 +2527,7 @@
                                               </div>
                                             </label>
                                           </div>
-                                          <div class="_klarpw"></div>
+                                          <div class="place__recommended-no"></div>
                                         </div>
                                       </div>
                                       <div class="account-container__menu-container">
@@ -3328,7 +3328,7 @@
                                                   </svg>
                                                 </div>
                                               </div>
-                                              <div class="_klarpw"></div>
+                                              <div class="place__recommended-no"></div>
                                             </div>
                                           </div>
                                         </div>
@@ -3359,7 +3359,7 @@
                                                   </div>
                                                 </label>
                                               </div>
-                                              <div class="_klarpw"></div>
+                                              <div class="place__recommended-no"></div>
                                             </div>
                                           </div>
                                         </div>
@@ -3740,7 +3740,7 @@
                                                     </div>
                                                   </label>
                                                 </div>
-                                                <div class="_klarpw"></div>
+                                                <div class="place__recommended-no"></div>
                                               </div>
                                             </div>
                                             <div class="account-container__menu-field">
@@ -3769,7 +3769,7 @@
                                                     </div>
                                                   </label>
                                                 </div>
-                                                <div class="_klarpw"></div>
+                                                <div class="place__recommended-no"></div>
                                               </div>
                                             </div>
                                           </div>
@@ -3934,7 +3934,7 @@
                                                 </svg>
                                               </div>
                                             </div>
-                                            <div class="_klarpw"></div>
+                                            <div class="place__recommended-no"></div>
                                           </div>
                                         </div>
                                         <div
@@ -4115,7 +4115,7 @@
                                                 </div>
                                               </label>
                                             </div>
-                                            <div class="_klarpw"></div>
+                                            <div class="place__recommended-no"></div>
                                           </div>
                                         </div>
                                         <div
@@ -5873,7 +5873,7 @@
                                                           </label>
                                                         </div>
                                                         <div
-                                                          class="_klarpw"
+                                                          class="place__recommended-no"
                                                         ></div>
                                                       </div>
                                                     </div>
@@ -5919,7 +5919,7 @@
                                                           </label>
                                                         </div>
                                                         <div
-                                                          class="_klarpw"
+                                                          class="place__recommended-no"
                                                         ></div>
                                                       </div>
                                                     </div>
@@ -5965,7 +5965,7 @@
                                                           </label>
                                                         </div>
                                                         <div
-                                                          class="_klarpw"
+                                                          class="place__recommended-no"
                                                         ></div>
                                                       </div>
                                                     </div>
@@ -6011,7 +6011,7 @@
                                                           </label>
                                                         </div>
                                                         <div
-                                                          class="_klarpw"
+                                                          class="place__recommended-no"
                                                         ></div>
                                                       </div>
                                                     </div>
@@ -6156,7 +6156,7 @@
                                                 </div>
                                               </label>
                                             </div>
-                                            <div class="_klarpw"></div>
+                                            <div class="place__recommended-no"></div>
                                           </div>
                                           <div style="margin-top: 16px">
                                             <div>
@@ -6184,7 +6184,7 @@
                                                   </div>
                                                 </label>
                                               </div>
-                                              <div class="_klarpw"></div>
+                                              <div class="place__recommended-no"></div>
                                             </div>
                                           </div>
                                           <div style="margin-top: 16px">
@@ -6416,7 +6416,7 @@
                                                   </svg>
                                                 </div>
                                               </div>
-                                              <div class="_klarpw"></div>
+                                              <div class="place__recommended-no"></div>
                                             </div>
                                           </div>
                                           <div style="margin-top: 16px">
@@ -6445,7 +6445,7 @@
                                                   </div>
                                                 </label>
                                               </div>
-                                              <div class="_klarpw"></div>
+                                              <div class="place__recommended-no"></div>
                                             </div>
                                           </div>
                                           <div class="account-container__menu-container">
@@ -7593,7 +7593,7 @@
                                                       </svg>
                                                     </div>
                                                   </div>
-                                                  <div class="_klarpw"></div>
+                                                  <div class="place__recommended-no"></div>
                                                 </div>
                                               </div>
                                             </div>
@@ -7624,7 +7624,7 @@
                                                       </div>
                                                     </label>
                                                   </div>
-                                                  <div class="_klarpw"></div>
+                                                  <div class="place__recommended-no"></div>
                                                 </div>
                                               </div>
                                             </div>
