--- a/products.html
+++ b/products.html
@@ -7033,7 +7033,7 @@
                                                             --pricing-guest-primary-line-qualifier-line-height: 18px;
                                                           "
                                                         >
-                                                          <div class="_ati8ih">
+                                                          <div class="place__nearby-card-pricing">
                                                             <span
                                                               class="pricing"
                                                               ><div
@@ -9293,7 +9293,7 @@
                                                             --pricing-guest-primary-line-qualifier-line-height: 18px;
                                                           "
                                                         >
-                                                          <div class="_ati8ih">
+                                                          <div class="place__nearby-card-pricing">
                                                             <span
                                                               class="pricing"
                                                               ><div
@@ -13963,7 +13963,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_rut4we">
-                                                        <div class="_owkz1m">
+                                                        <div class="place__recommended-no-text">
                                                           <button
                                                             aria-label="Open the keyboard shortcuts panel"
                                                             type="button"
@@ -16474,7 +16474,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_rut4we">
-                                                        <div class="_owkz1m">
+                                                        <div class="place__recommended-no-text">
                                                           <button
                                                             aria-label="Open the keyboard shortcuts panel"
                                                             type="button"
@@ -16582,7 +16582,7 @@
                                                                 "
                                                               >
                                                                 <div
-                                                                  class="_ati8ih"
+                                                                  class="place__nearby-card-pricing"
                                                                 >
                                                                   <span
                                                                     class="pricing"
@@ -16608,7 +16608,7 @@
                                                                 </div>
                                                               </div>
                                                               <div
-                                                                class="_klarpw"
+                                                                class="place__recommended-no"
                                                               >
                                                                 <span
                                                                   class="_1y9gwt75"
@@ -17082,7 +17082,7 @@
                                                                 "
                                                               >
                                                                 <div
-                                                                  class="_ati8ih"
+                                                                  class="place__nearby-card-pricing"
                                                                 >
                                                                   <span
                                                                     class="pricing"
@@ -17108,7 +17108,7 @@
                                                                 </div>
                                                               </div>
                                                               <div
-                                                                class="_klarpw"
+                                                                class="place__recommended-no"
                                                               >
                                                                 <span
                                                                   class="_1y9gwt75"
@@ -17777,7 +17777,7 @@
                                                                 "
                                                               >
                                                                 <div
-                                                                  class="_ati8ih"
+                                                                  class="place__nearby-card-pricing"
                                                                 >
                                                                   <span
                                                                     class="pricing"
@@ -17803,7 +17803,7 @@
                                                                 </div>
                                                               </div>
                                                               <div
-                                                                class="_klarpw"
+                                                                class="place__recommended-no"
                                                               >
                                                                 <span
                                                                   class="_1y9gwt75"
