--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -178,7 +178,7 @@
                         <div
                           id="reason-GUEST_OFFER_DAMAGE"
                           aria-disabled="false"
-                          class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                          class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                         >
                           <label
                             for="reason-GUEST_OFFER_DAMAGE-row-radio-button"
@@ -208,7 +208,7 @@
                         <div
                           id="reason-GUEST_OFFER_EXTRA"
                           aria-disabled="false"
-                          class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                          class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                         >
                           <label
                             for="reason-GUEST_OFFER_EXTRA-row-radio-button"
@@ -247,7 +247,7 @@
                         <div
                           id="reason-GUEST_OFFER_OTHER"
                           aria-disabled="false"
-                          class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                          class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                         >
                           <label
                             for="reason-GUEST_OFFER_OTHER-row-radio-button"
