--- a/signup_login.html
+++ b/signup_login.html
@@ -1364,7 +1364,7 @@
                                           </div>
                                         </label>
                                       </div>
-                                      <div class="_klarpw"></div>
+                                      <div class="place__recommended-no"></div>
                                     </div>
                                     <div>
                                       <div class="_k8r05be">
@@ -1395,7 +1395,7 @@
                                           </div>
                                         </label>
                                       </div>
-                                      <div class="_klarpw">
+                                      <div class="place__recommended-no">
                                         <div
                                           class="_1yhfti2"
                                           id="email-login-email-InputField-help"
@@ -2750,7 +2750,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_klarpw">
+                                        <div class="place__recommended-no">
                                           <div class="_1yhfti2" id="error-text">
                                             <span style="margin-right: 4px"
                                               ><svg
@@ -2804,7 +2804,7 @@
                                               </div>
                                             </label>
                                           </div>
-                                          <div class="_klarpw">
+                                          <div class="place__recommended-no">
                                             <div
                                               class="_pxnjg"
                                               id="email-signup-email-InputField-help"
@@ -2845,7 +2845,7 @@
                                               </div>
                                             </label>
                                           </div>
-                                          <div class="_klarpw">
+                                          <div class="place__recommended-no">
                                             <div
                                               class="_1yhfti2"
                                               id="email-signup-email-InputField-help"
@@ -2914,7 +2914,7 @@
                                               </div>
                                             </div>
                                           </div>
-                                          <div class="_klarpw"></div>
+                                          <div class="place__recommended-no"></div>
                                         </div>
                                         <div>
                                           <div class="_k8r05be">
@@ -2961,7 +2961,7 @@
                                         </div>
                                         <div
                                           data-testid="password-rules-indicator"
-                                          class="_klarpw"
+                                          class="place__recommended-no"
                                           aria-live="polite"
                                           aria-atomic="true"
                                         >
@@ -4634,7 +4634,7 @@
                                         </div>
                                       </label>
                                     </div>
-                                    <div class="_klarpw"></div>
+                                    <div class="place__recommended-no"></div>
                                   </div>
                                   <div>
                                     <div class="_k8r05be">
@@ -4665,7 +4665,7 @@
                                         </div>
                                       </label>
                                     </div>
-                                    <div class="_klarpw">
+                                    <div class="place__recommended-no">
                                       <div
                                         class="_1yhfti2"
                                         id="email-login-email-InputField-help"
@@ -6128,7 +6128,7 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="_klarpw">
+                                      <div class="place__recommended-no">
                                         <div class="_1yhfti2" id="error-text">
                                           <span style="margin-right: 4px"
                                             ><svg
@@ -6180,7 +6180,7 @@
                                             </div>
                                           </label>
                                         </div>
-                                        <div class="_klarpw">
+                                        <div class="place__recommended-no">
                                           <div
                                             class="_pxnjg"
                                             id="email-signup-email-InputField-help"
@@ -6219,7 +6219,7 @@
                                             </div>
                                           </label>
                                         </div>
-                                        <div class="_klarpw">
+                                        <div class="place__recommended-no">
                                           <div
                                             class="_1yhfti2"
                                             id="email-signup-email-InputField-help"
@@ -6288,7 +6288,7 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="_klarpw"></div>
+                                        <div class="place__recommended-no"></div>
                                       </div>
                                       <div>
                                         <div class="_k8r05be">
@@ -6335,7 +6335,7 @@
                                       </div>
                                       <div
                                         data-testid="password-rules-indicator"
-                                        class="_klarpw"
+                                        class="place__recommended-no"
                                         aria-live="polite"
                                         aria-atomic="true"
                                       >
