--- a/submission/about.html
+++ b/submission/about.html
@@ -1069,7 +1069,7 @@
                                         How are you hosting this experience?
                                       </div>
                                     </legend>
-                                    <div class="_klarpw">
+                                    <div class="place__recommended-no">
                                       <label
                                         for="info_best_describe_you_and_experience-I’m hosting by myself"
                                         class="flex"
@@ -1089,7 +1089,7 @@
                                         ></label
                                       >
                                     </div>
-                                    <div class="_klarpw">
+                                    <div class="place__recommended-no">
                                       <label
                                         for="info_best_describe_you_and_experience-I have a team who helps me host"
                                         class="flex"
