--- a/submission/etd.html
+++ b/submission/etd.html
@@ -1123,7 +1123,7 @@
                                         experience?
                                       </div>
                                     </legend>
-                                    <div class="_klarpw">
+                                    <div class="place__recommended-no">
                                       <label
                                         for="info_score_educate_about_animals-Yes"
                                         class="flex"
@@ -1141,7 +1141,7 @@
                                         ></label
                                       >
                                     </div>
-                                    <div class="_klarpw">
+                                    <div class="place__recommended-no">
                                       <label
                                         for="info_score_educate_about_animals-No"
                                         class="flex"
