--- a/submission/expertise.html
+++ b/submission/expertise.html
@@ -1119,7 +1119,7 @@
                                         Have you hosted this activity before?
                                       </div>
                                     </legend>
-                                    <div class="_klarpw">
+                                    <div class="place__recommended-no">
                                       <label
                                         for="info_previously_hosted_activity-Yes, I’ve hosted or taught this activity professionally"
                                         class="flex"
@@ -1140,7 +1140,7 @@
                                         ></label
                                       >
                                     </div>
-                                    <div class="_klarpw">
+                                    <div class="place__recommended-no">
                                       <label
                                         for="info_previously_hosted_activity-Yes, I’ve hosted this activity informally for friends or family"
                                         class="flex"
@@ -1160,7 +1160,7 @@
                                         ></label
                                       >
                                     </div>
-                                    <div class="_klarpw">
+                                    <div class="place__recommended-no">
                                       <label
                                         for="info_previously_hosted_activity-No, I’ve never hosted this activity before"
                                         class="flex"
