--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1268,7 +1268,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                       </svg>
                                     </div>
                                   </div>
-                                  <div class="_klarpw">
+                                  <div class="place__recommended-no">
                                     <div
                                       class="_pxnjg"
                                       id="experience_duration-InputField-help"
