--- a/wishlists.html
+++ b/wishlists.html
@@ -846,7 +846,7 @@
                                             <div class="_i1ipt1">
                                               1st Wishlist
                                             </div>
-                                            <div class="_owkz1m">Sep 3 – 5</div>
+                                            <div class="place__recommended-no-text">Sep 3 – 5</div>
                                           </div>
                                         </div>
                                       </div></a
@@ -958,7 +958,7 @@
                                         <div class="_tdgb4l">
                                           <div class="w-full">
                                             <div class="_i1ipt1">5th</div>
-                                            <div class="_owkz1m"></div>
+                                            <div class="place__recommended-no-text"></div>
                                           </div>
                                         </div></div
                                     ></a>
@@ -1069,7 +1069,7 @@
                                         <div class="_tdgb4l">
                                           <div class="w-full">
                                             <div class="_i1ipt1">Cooking</div>
-                                            <div class="_owkz1m"></div>
+                                            <div class="place__recommended-no-text"></div>
                                           </div>
                                         </div></div
                                     ></a>
@@ -1150,7 +1150,7 @@
                                         <div class="_tdgb4l">
                                           <div class="w-full">
                                             <div class="_i1ipt1">Concerts</div>
-                                            <div class="_owkz1m"></div>
+                                            <div class="place__recommended-no-text"></div>
                                           </div>
                                         </div></div
                                     ></a>
@@ -1263,7 +1263,7 @@
                                             <div class="_i1ipt1">
                                               Experiences
                                             </div>
-                                            <div class="_owkz1m"></div>
+                                            <div class="place__recommended-no-text"></div>
                                           </div>
                                         </div></div
                                     ></a>
