--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -178,7 +178,7 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="stepper-item--0-row-title"
-                                class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                               >
                                 <div class="flex">
                                   <div class="explore-filter-menu__list-label">
@@ -275,7 +275,7 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="stepper-item--1-row-title"
-                                class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                               >
                                 <div class="flex">
                                   <div class="explore-filter-menu__list-label">
@@ -372,7 +372,7 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="stepper-item--2-row-title"
-                                class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                               >
                                 <div class="flex">
                                   <div class="explore-filter-menu__list-label">
@@ -469,7 +469,7 @@
                                 aria-disabled="false"
                                 role="group"
                                 aria-labelledby="stepper-item--3-row-title"
-                                class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                               >
                                 <div class="flex">
                                   <div class="explore-filter-menu__list-label">
