--- a/profile.html
+++ b/profile.html
@@ -1370,7 +1370,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                               </div></span
                                             >
                                           </h2>
-                                          <div class="_klarpw">
+                                          <div class="place__recommended-no">
                                             <div class="_1v365y9">
                                               <div class="_1v8nkzp">
                                                 <div class="_gkkj7s">
@@ -1392,7 +1392,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                   >
                                                 </div>
                                               </div>
-                                              <div class="_klarpw">
+                                              <div class="place__recommended-no">
                                                 <div class="_djrljn">
                                                   <div class="_1009fyxt">
                                                     <a
@@ -2473,7 +2473,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         </div></span
                                       >
                                     </h2>
-                                    <div class="_klarpw">
+                                    <div class="place__recommended-no">
                                       <div class="_1v365y9">
                                         <div class="_1v8nkzp">
                                           <div class="_gkkj7s">
@@ -2495,7 +2495,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             >
                                           </div>
                                         </div>
-                                        <div class="_klarpw">
+                                        <div class="place__recommended-no">
                                           <div class="_djrljn">
                                             <div class="_1009fyxt">
                                               <a
