--- a/resolutions.html
+++ b/resolutions.html
@@ -154,7 +154,7 @@
                       <div
                         id="intent-send-money"
                         aria-disabled="false"
-                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                        class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                       >
                         <label
                           for="intent-send-money-row-radio-button"
@@ -185,7 +185,7 @@
                       <div
                         id="intent-request-money"
                         aria-disabled="false"
-                        class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                        class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                       >
                         <label
                           for="intent-request-money-row-radio-button"
