--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1174,7 +1174,7 @@
                                       When are you typically available to host?
                                     </div>
                                   </legend>
-                                  <div class="_klarpw">
+                                  <div class="place__recommended-no">
                                     <label
                                       for="info_available_date_to_host-Weekdays"
                                       class="flex"
@@ -1194,7 +1194,7 @@
                                       ></label
                                     >
                                   </div>
-                                  <div class="_klarpw">
+                                  <div class="place__recommended-no">
                                     <label
                                       for="info_available_date_to_host-Weekends"
                                       class="flex"
@@ -1213,7 +1213,7 @@
                                       ></label
                                     >
                                   </div>
-                                  <div class="_klarpw">
+                                  <div class="place__recommended-no">
                                     <label
                                       for="info_available_date_to_host-Both weekdays and weekends"
                                       class="flex"
@@ -1232,7 +1232,7 @@
                                       ></label
                                     >
                                   </div>
-                                  <div class="_klarpw">
+                                  <div class="place__recommended-no">
                                     <label
                                       for="info_available_date_to_host-I don’t know yet"
                                       class="flex"
