--- a/submission/review.html
+++ b/submission/review.html
@@ -1092,7 +1092,7 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="disclosure-action-row-row-title"
-                                      class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                      class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                                     >
                                       <div class="flex">
                                         <div class="explore-filter-menu__list-label">
@@ -1164,7 +1164,7 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="disclosure-action-row-row-title"
-                                      class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                      class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                                     >
                                       <div class="flex">
                                         <div class="explore-filter-menu__list-label">
@@ -1236,7 +1236,7 @@
                                       aria-disabled="false"
                                       role="group"
                                       aria-labelledby="disclosure-action-row-row-title"
-                                      class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
+                                      class="explore-filter-menu__list-padding place__map-card-detail dir dir-ltr"
                                     >
                                       <div class="flex">
                                         <div class="explore-filter-menu__list-label">
