--- a/wishlist.html
+++ b/wishlist.html
@@ -539,7 +539,7 @@
                                           </div>
                                           <div class="place__nearby-card-spacer dir dir-ltr">
                                             <div style="--pricing-guest-display-price-alignment:flex-start; --pricing-guest-display-price-flex-wrap:wrap; --pricing-guest-primary-line-font-size:var(--iw-ehf-f); --pricing-guest-primary-line-line-height:var(---s-l-myu); --pricing-guest-primary-line-unit-price-font-weight:800; --pricing-guest-primary-line-trailing-content-font-size:14px; --pricing-guest-secondary-line-font-size:14px; --pricing-guest-secondary-line-line-height:18px; --pricing-guest-secondary-line-color:#717171; --pricing-guest-explanation-disclaimer-font-size:14px; --pricing-guest-explanation-disclaimer-line-height:18px; --pricing-guest-primary-line-strikethrough-price-font-weight:600; --pricing-guest-primary-line-qualifier-font-size:var(--iw-ehf-f); --pricing-guest-primary-line-qualifier-line-height:var(---s-l-myu);">
-                                              <div class="_ati8ih">
+                                              <div class="place__nearby-card-pricing">
                                                 <span class="_14y1gc">
                                                   <div class="pricing__info" aria-hidden="true">
                                                     <span class="pricing__unit-price">
@@ -821,7 +821,7 @@
                                           </div>
                                           <div class="place__nearby-card-spacer dir dir-ltr">
                                             <div style="--pricing-guest-display-price-alignment:flex-start; --pricing-guest-display-price-flex-wrap:wrap; --pricing-guest-primary-line-font-size:var(--iw-ehf-f); --pricing-guest-primary-line-line-height:var(---s-l-myu); --pricing-guest-primary-line-unit-price-font-weight:800; --pricing-guest-primary-line-trailing-content-font-size:14px; --pricing-guest-secondary-line-font-size:14px; --pricing-guest-secondary-line-line-height:18px; --pricing-guest-secondary-line-color:#717171; --pricing-guest-explanation-disclaimer-font-size:14px; --pricing-guest-explanation-disclaimer-line-height:18px; --pricing-guest-primary-line-strikethrough-price-font-weight:600; --pricing-guest-primary-line-qualifier-font-size:var(--iw-ehf-f); --pricing-guest-primary-line-qualifier-line-height:var(---s-l-myu);">
-                                              <div class="_ati8ih">
+                                              <div class="place__nearby-card-pricing">
                                                 <span class="_14y1gc">
                                                   <div class="pricing__info" aria-hidden="true">
                                                     <span class="pricing__unit-price">
@@ -2591,7 +2591,7 @@
                                                   );
                                                 "
                                               >
-                                                <div class="_ati8ih">
+                                                <div class="place__nearby-card-pricing">
                                                   <span class="pricing"
                                                     ><div
                                                       class="pricing__info"
@@ -3239,7 +3239,7 @@
                                                   );
                                                 "
                                               >
-                                                <div class="_ati8ih">
+                                                <div class="place__nearby-card-pricing">
                                                   <span class="pricing"
                                                     ><div
                                                       class="pricing__info"
@@ -3983,7 +3983,7 @@
                                                   );
                                                 "
                                               >
-                                                <div class="_ati8ih">
+                                                <div class="place__nearby-card-pricing">
                                                   <span class="pricing"
                                                     ><div
                                                       class="pricing__info"
